syntax = "proto3";

package com.lcb123.srv.user;

service User {
	rpc Login (LoginRequest) returns (Response){}
	rpc Logout (Request) returns (Response){}
	rpc UserDetail(UserRequest) returns (UserInfo) {}
}

message Request {
	string name = 1;
}
message Response {
	int64 code = 1;
	string msg = 2;
}
message LoginRequest {
	string username = 1;
	string password = 2;
}
message UserRequest {
	string uid = 1;
}

message UserInfo {
	string username = 1;
	string avatar  =2 ;
	string uid     =3 ;
}
message Message {
	string say = 1;
}